# llm-locust

./: .gitignore  METRICS_GUIDE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.sh
configs/engines/: README.md  ollama.yaml  tgi.yaml  vllm-performance.yaml  vllm-quantized.yaml  vllm.yaml  vllm_cost.yaml
configs/races/: README.md  cluster-race.yaml  demo-race.yaml  performance-vs-quantized.yaml  production-candidates.yaml  rag-benchmark.yaml  stress-test.yaml  test-2min.yaml  test-quick.yaml
datasets/: .gitkeep  README.md
docs/: AGILE_PLAN_INTERACTIVE_CLI.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COST_ESTIMATION_GUIDE.md  DATASETS.md  METRICS_COVERAGE.md  PRD_BENCHMARK_DASHBOARD.md  README.md  README_MILLION_TOKENS.md  TESTS.md
examples/: README_benchmark_1b.md  benchmark_chat_simulation.py  benchmark_code_generation.py  benchmark_constant_rate.py  benchmark_cost_estimation.py  benchmark_million_tokens.py  benchmark_million_tokens_stress.py  benchmark_poisson_rate.py  benchmark_rag_simulation.py  benchmark_test_1b.py  benchmark_variable_load.py  demo_tui.py  simple_test.py  test_race_config.py
llm_locust/: __init__.py
llm_locust/cli/: __init__.py  race.py
llm_locust/clients/: __init__.py  openai.py
llm_locust/core/: __init__.py  models.py  spawner.py  user.py
llm_locust/metrics/: __init__.py  collector.py  metrics.py  per_request_logger.py
llm_locust/race/: __init__.py  animation.py  charts.py  config.py  health.py  orchestrator.py  runner.py  sparkline.py  state.py  summary.py  tui.py
llm_locust/utils/: __init__.py  prompts.py
results/: .gitkeep  README.md
streamlit_app/: ARCHITECTURE.md  README.md  app.py  config.py  requirements.txt
streamlit_app/.streamlit/: config.toml
streamlit_app/docs/: API_COST_COMPARISON_GUIDE.md  DASHBOARD_TRACKER.md  DESIGN_PRINCIPLES.md  IMPLEMENTATION_STATUS.md  PRD_BENCHMARK_DASHBOARD.md  REFACTORING_PLAN.md  SPRINT1_COMPLETION.md
streamlit_app/lib/: components.py  export.py
streamlit_app/models/: __init__.py  benchmark.py
streamlit_app/pages/: 1_Comparison.py  1_Latency_Analysis.py  2_Latency_Analysis.py  2_Throughput_Analysis.py  3_Error_Analysis.py  3_Throughput_Analysis.py  4_Reliability.py  5_Token_Analysis.py  6_Cost_Analysis.py
